(test
 (name test_vitrine)
 (libraries vitrine alcotest))

(test
 (name test_mirage)
 (libraries vitrine vitrine_mirage cohttp cohttp-lwt lwt.unix alcotest))

(executable
 (name test_cli)
 (libraries alcotest unix))

(rule
 (alias runtest)
 (deps
  test_cli.exe
  (:vitrine ../bin/main.exe))
 (action
  (setenv
   VITRINE_EXE
   %{vitrine}
   (run ./test_cli.exe))))
